update on package.json #3

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{kdlo-al}.github.io/{Ravenous}",
+  "homepage": "http://kdlo-al.github.io/Ravenous",
   "name": "ravenous",
   "version": "0.1.0",
   "private": true,
